objects/TPO_PV_SIM_INT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Using for PV sim Engine End point and Access key</description>
    <fields>
        <fullName>Access_key__c</fullName>
        <label>Access key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_point__c</fullName>
        <label>End point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOAP_END_POINT__c</fullName>
        <label>SOAP_END_POINT</label>
        <type>Url</type>
    </fields>
    <label>TPO PV SIM INT</label>
</CustomObject>